Fix some bad HTML.

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,7 @@
         <div class="navbar navbar-fixed-top">
             <div class="navbar-inner">
                 <div class="container">
-                    <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                    <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse" data-proofer-ignore>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -10,7 +10,7 @@
                     <div class="nav-collapse collapse">
                         <ul class="nav pull-right">
                             <li class="dropdown{% if page.url contains '/about/' %} active{% endif %}">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">About <b class="caret"></b></a>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-proofer-ignore>About <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="/about/">About Us</a></li>
                                     <li><a href="/about/first/">About FIRST</a></li>
@@ -22,7 +22,7 @@
                                 </ul>
                             </li>
                             <li class="dropdown{% if page.url contains '/community/' %} active{% endif %}">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Community <b class="caret"></b></a>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-proofer-ignore>Community <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="/community/">Outreach</a></li>
                                     <li><a href="/community/projects/">Projects &amp; Demos</a></li>
@@ -30,7 +30,7 @@
                                 </ul>
                             </li>
                             <li class="dropdown{% if page.url contains '/resources/' or page.url == '/calendar/index.html' %} active{% endif %}">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <b class="caret"></b></a>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-proofer-ignore>Resources <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="/resources/">Documents &amp; Tutorials</a></li>
                                     <li><a href="/calendar/">Team Calendar</a></li>
