--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -29,7 +29,7 @@
                                     <li><a href="/community/alumni/">Alumni Association</a></li>
                                 </ul>
                             </li>
-                            <li class="dropdown{% if page.url contains '/resources/' or page.url == '/calendar/index.html' %} active{% endif %}">
+                            <li class="dropdown{% if page.url contains '/resources/' or page.url == '/calendar/' %} active{% endif %}">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-proofer-ignore>Resources <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="/resources/">Documents &amp; Tutorials</a></li>
@@ -41,8 +41,8 @@
                                 </ul>
                             </li>
                             <li{% if page.url contains '/blog/' %} class="active"{% endif %}><a href="/blog/">Blog</a></li>
-                            <li{% if page.url == '/sponsors/index.html' %} class="active"{% endif %}><a href="/sponsors/">Sponsors</a></li>
-                            <li{% if page.url == '/contact/index.html' %} class="active"{% endif %}><a href="/contact/">Contact</a></li>
+                            <li{% if page.url == '/sponsors/' %} class="active"{% endif %}><a href="/sponsors/">Sponsors</a></li>
+                            <li{% if page.url == '/contact/' %} class="active"{% endif %}><a href="/contact/">Contact</a></li>
                         </ul>
                     </div><!--/.nav-collapse -->
                 </div>
