--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="/js/vendor/jquery-1.8.3.min.js"><\/script>')</script>
 
-        {% if page.url == '/index.html' %}
+        {% if page.url == '/' %}
         <script>
             $(document).ready(function() {
                 $('.carousel').carousel({
