Replace "division" with "department"

--- a/_layouts/page-with-sidebar.html
+++ b/_layouts/page-with-sidebar.html
@@ -10,8 +10,8 @@ layout: default
         <hr>
         {% if page.url == '/about/' %}
             {% include sidebar/about.html %}
-        {% elsif page.url == '/about/divisions/' %}
-            {% include sidebar/divisions.html %}
+        {% elsif page.url == '/about/departments/' %}
+            {% include sidebar/departments.html %}
         {% elsif page.url == '/about/ec/' %}
             {% include sidebar/ec.html %}
         {% elsif page.url == '/about/mentors/' %}
