--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -15,7 +15,7 @@
                                     <li><a href="/about/">About Us</a></li>
                                     <li><a href="/about/first/">About FIRST</a></li>
                                     <li><a href="/about/history/">History</a></li>
-                                    <li><a href="/about/divisions/">Divisions</a></li>
+                                    <li><a href="/about/departments/">Departments</a></li>
                                     <li><a href="/about/ec/">Leadership</a></li>
                                     <li><a href="/about/mentors/">Mentors</a></li>
                                     <li><a href="/about/website/">Website</a></li>
