--- a/_includes/sidebar/about.html
+++ b/_includes/sidebar/about.html
@@ -2,7 +2,7 @@
 <ul>
     <li><a href="/about/first/">About FIRST</a></li>
     <li><a href="/about/history/">Team History</a></li>
-    <li><a href="/about/divisions/">Divisions</a></li>
+    <li><a href="/about/departments/">Departments</a></li>
     <li><a href="/about/ec/">Leadership</a></li>
     <li><a href="/about/mentors/">Mentors</a></li>
     <li><a href="/about/website/">About This Website</a></li>
