--- a/css/main.css
+++ b/css/main.css
@@ -109,3 +109,20 @@ article{
 .read-more a:hover {
     background-color: #f0f0f0;
 }
+
+/* Responsive embedded items https://bootstrapmaster.com/implement-responsive-youtube-vimeo-embed-iframe-twitter-bootstrap-3/ */
+.responsive-video {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 60px; overflow: hidden;
+}
+
+.responsive-video iframe,
+.responsive-video object,
+.responsive-video embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
