--- a/_includes/sidebar/website.html
+++ b/_includes/sidebar/website.html
@@ -1,6 +1,2 @@
 <h4>StuyPulse Network</h4>
-<p>Check out the other sites in the StuyPulse Network!</p>
-<ul>
-    <li><a href="http://firstconnects.us/">FIRSTConnects.Us</a></li>
-    <li><a href="http://firstthoughts.org/">FIRSTthoughts</a></li>
-</ul>
+<p>Check out <a href="http://firstthoughts.org">FIRSTthoughts</a>!</p>
