Move media navigation into dropdown

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -29,15 +29,18 @@
                                     <li><a href="/community/alumni/">Alumni Association</a></li>
                                 </ul>
                             </li>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-proofer-ignore>Media <b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="http://www.flickr.com/photos/stuypulse">Photos</a></li>
+                                    <li><a href="http://www.youtube.com/stuy694">Videos</a></li>
+                                </ul>
+                            </li>
                             <li class="dropdown{% if page.url contains '/resources/' or page.url == '/calendar/' %} active{% endif %}">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-proofer-ignore>Resources <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="/resources/">Documents &amp; Tutorials</a></li>
                                     <li><a href="/calendar/">Team Calendar</a></li>
-                                    <li class="divider"></li>
-                                    <li class="nav-header">Media</li>
-                                    <li><a href="http://www.flickr.com/photos/stuypulse">Photos</a></li>
-                                    <li><a href="http://www.youtube.com/stuy694">Videos</a></li>
                                 </ul>
                             </li>
                             <li{% if page.url contains '/blog/' %} class="active"{% endif %}><a href="/blog/">Blog</a></li>
