--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -45,6 +45,7 @@
                             </li>
                             <li{% if page.url contains '/blog/' %} class="active"{% endif %}><a href="/blog/">Blog</a></li>
                             <li{% if page.url == '/sponsors/' %} class="active"{% endif %}><a href="/sponsors/">Sponsors</a></li>
+                            <li{% if page.url == '/donate/' %} class="active"{% endif %}><a href="/donate/">Donate</a></li>
                             <li{% if page.url == '/contact/' %} class="active"{% endif %}><a href="/contact/">Contact</a></li>
                         </ul>
                     </div><!--/.nav-collapse -->
