--- a/_layouts/history.html
+++ b/_layouts/history.html
@@ -29,7 +29,7 @@ description: Over the many years of its existence, StuyPulse has developed signi
                     <h4>Additional Resources</h4>
                     <ul>
                         {% if page.source-link %}<li><a href="{{ page.source-link }}">{{ page.title }}'s source code</a></li>{% endif %}
-                        <li><a href="http://www.thebluealliance.com/team/694/{{ page.year }}">{{ page.year }} season stats on The Blue Alliance</a></li>
+                        <li><a href="https://www.thebluealliance.com/team/694/{{ page.year }}">{{ page.year }} season stats on The Blue Alliance</a></li>
                     </ul>
                     {% if page.flickr-collection-url %}
                         <h4>Photo Gallery</h4>
