Create directory and page for coatDrive

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -27,6 +27,7 @@
                                     <li><a href="/community/">Outreach</a></li>
                                     <li><a href="/community/projects/">Projects &amp; Demos</a></li>
                                     <li><a href="/community/alumni/">Alumni Association</a></li>
+                                    <li><a href="/community/coatDrive/">Coat Drive </a></li>
                                 </ul>
                             </li>
                             <li class="dropdown">
