Add ids for donate

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -46,7 +46,7 @@
                             <li{% if page.url contains '/blog/' %} class="active"{% endif %}><a href="/blog/">Blog</a></li>
                             <li{% if page.url == '/sponsors/' %} class="active"{% endif %}><a href="/sponsors/">Sponsors</a></li>
                             <li{% if page.url == '/contact/' %} class="active"{% endif %}><a href="/contact/">Contact</a></li>
-                            <li{% if page.url == '/donate/' %} class="active" {%elsif page.url != '/donate/' %} class="donate" {% endif %}><a href="/donate/" >Donate</a></li>
+                            <li id="donate"><a href="/donate/" >Donate</a></li>
                         </ul>
                     </div><!--/.nav-collapse -->
                 </div>
