--- a/css/main.css
+++ b/css/main.css
@@ -128,6 +128,16 @@ article{
 }
 
 /* NavBar Styles */
-.donate {
-        background-color: #2980B9; 
+#donate :hover{
+        background-color: #2E86C1;
+        color: #F2F3F4;
+}
+
+#donate {
+        background-color: #3498DB;
+}
+
+#donate a {
+        color: white;
+        text-shadow: none;
 }
