--- a/_includes/disqus-count.html
+++ b/_includes/disqus-count.html
@@ -5,7 +5,7 @@ var disqus_shortname = 'stuypulse';
 (function () {
 var s = document.createElement('script'); s.async = true;
 s.type = 'text/javascript';
-s.src = 'http://' + disqus_shortname + '.disqus.com/count.js';
+s.src = '//' + disqus_shortname + '.disqus.com/count.js';
 (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
 }());
 </script>
