Edit join page and add to nav-bar

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -46,6 +46,7 @@
                             <li{% if page.url contains '/blog/' %} class="active"{% endif %}><a href="/blog/">Blog</a></li>
                             <li{% if page.url == '/sponsors/' %} class="active"{% endif %}><a href="/sponsors/">Sponsors</a></li>
                             <li{% if page.url == '/contact/' %} class="active"{% endif %}><a href="/contact/">Contact</a></li>
+                            <li{% if page.url == '/join/' %} class="active"{% endif %}><a href="/join/">Join The Team! </a></li>
                             <li id="donate"><a href="/donate/" >Donate</a></li>
                         </ul>
                     </div><!--/.nav-collapse -->
