Change reference from Team694 to StuyPulse

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
                         <li><a href="http://twitter.com/StuyPulseRobots">Follow</a></li>
                         <li><a href="http://www.facebook.com/stuypulse">Like</a></li>
                         <li><a href="http://www.youtube.com/user/stuy694">Subscribe</a></li>
-                        <li><a href="https://github.com/Team694">Fork</a></li>
+                        <li><a href="https://github.com/StuyPulse">Fork</a></li>
                     </ul>
                 </div>
             </footer>
