Update broken FirstThoughts link

--- a/_includes/sidebar/website.html
+++ b/_includes/sidebar/website.html
@@ -1,2 +1,2 @@
 <h4>StuyPulse Network</h4>
-<p>Check out <a href="http://firstthoughts.org">FIRSTthoughts</a>!</p>
+<p>Check out <a href="https://www.youtube.com/playlist?list=PLTzhdzF4LCm6dQEfV9vJgVtf336YnuIZQ">FIRSTthoughts</a>!</p>
