Actually update twitter URL
Co-authored-by: selym3 <mp3blue99@gmail.com>

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,11 @@
-            <footer>
-                <div class="footer-nav">
-                    <ul>
-                        <li>&copy; {{ site.time | date: "%Y" }} StuyPulse</li>
-                        <li><a href="http://twitter.com/StuyPulseRobots">Follow</a></li>
-                        <li><a href="http://www.facebook.com/stuypulse">Like</a></li>
-                        <li><a href="http://www.youtube.com/user/stuy694">Subscribe</a></li>
-                        <li><a href="https://github.com/StuyPulse">Fork</a></li>
-                    </ul>
-                </div>
-            </footer>
+<footer>
+    <div class="footer-nav">
+        <ul>
+            <li>&copy; {{ site.time | date: "%Y" }} StuyPulse</li>
+            <li><a href="http://twitter.com/StuyPulse">Follow</a></li>
+            <li><a href="http://www.facebook.com/stuypulse">Like</a></li>
+            <li><a href="http://www.youtube.com/user/stuy694">Subscribe</a></li>
+            <li><a href="https://github.com/StuyPulse">Fork</a></li>
+        </ul>
+    </div>
+</footer>
