--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <div class="footer-nav">
         <ul>
             <li>&copy; {{ site.time | date: "%Y" }} StuyPulse</li>
-            <li><a href="http://twitter.com/StuyPulse">Follow</a></li>
+            <li><a href="https://twitter.com/StuyPulse">Follow</a></li>
             <li><a href="http://www.facebook.com/stuypulse">Like</a></li>
             <li><a href="http://www.youtube.com/user/stuy694">Subscribe</a></li>
             <li><a href="https://github.com/StuyPulse">Fork</a></li>
