--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -40,6 +40,7 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-proofer-ignore>Resources <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="/resources/">Documents &amp; Tutorials</a></li>
+                                    <li><a href="/resources/technical-binders">Technical Binders</a></li>
                                     <li><a href="/resources/publications/">Team Publications</a></li>
                                     <li><a href="/calendar/">Team Calendar</a></li>
                                 </ul>
