--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,10 +2,11 @@
     <div class="footer-nav">
         <ul>
             <li>&copy; {{ site.time | date: "%Y" }} StuyPulse</li>
-            <li><a href="https://twitter.com/StuyPulse">Follow</a></li>
-            <li><a href="http://www.facebook.com/stuypulse">Like</a></li>
-            <li><a href="http://www.youtube.com/user/stuy694">Subscribe</a></li>
-            <li><a href="https://github.com/StuyPulse">Fork</a></li>
+            <li><a href="https://twitter.com/StuyPulse">Twitter</a></li>
+            <li><a href="https://www.facebook.com/stuypulse">Facebook</a></li>
+            <li><a href="https://www.instagram.com/stuypulse/">Instagram</a></li>
+            <li><a href="https://www.youtube.com/user/stuy694">Youtube</a></li>
+            <li><a href="https://github.com/StuyPulse">Github</a></li>
         </ul>
     </div>
 </footer>
