--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -40,11 +40,11 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-proofer-ignore>Resources <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="/resources/">Documents &amp; Tutorials</a></li>
-                                    <li><a href="/resources/publications/">Team Publications</a></li>
                                     <li><a href="/resources/technical-binders">Technical Binders</a></li>
+                                    <li><a href="/resources/publications/">Team Publications</a></li>
+                                    <li><a href="/calendar/">Team Calendar</a></li>
                                 </ul>
                             </li>
-                            <li{% if page.url == '/calendar/' %} class="active"{% endif %}><a href="/calendar/">Calendar</a></li>
                             <li{% if page.url contains '/blog/' %} class="active"{% endif %}><a href="/blog/">Blog</a></li>
                             <li{% if page.url == '/sponsors/' %} class="active"{% endif %}><a href="/sponsors/">Sponsors</a></li>
                             <li{% if page.url == '/contact/' %} class="active"{% endif %}><a href="/contact/">Contact</a></li>
