Change footer items into icons and add more socials

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,19 @@
+<head>
+    <script src="https://kit.fontawesome.com/9ac367e1c4.js" crossorigin="anonymous"></script>
+</head>
+
 <footer>
     <div class="footer-nav">
         <ul>
             <li>&copy; {{ site.time | date: "%Y" }} StuyPulse</li>
-            <li><a href="https://twitter.com/StuyPulse">Twitter</a></li>
-            <li><a href="https://www.facebook.com/stuypulse">Facebook</a></li>
-            <li><a href="https://www.instagram.com/stuypulse/">Instagram</a></li>
-            <li><a href="https://www.youtube.com/user/stuy694">Youtube</a></li>
-            <li><a href="https://github.com/StuyPulse">Github</a></li>
+            <li><a href="https://www.thebluealliance.com/team/694">Blue Alliance</a></li>
+            <li><a href="https://twitter.com/StuyPulse"><i class="fab fa-twitter" style="font-size:24px;color:red"></i></a></li>
+            <li><a href="https://www.facebook.com/stuypulse"><i class="fab fa-facebook" style="font-size:24px;color:red"></i></a></li>
+            <li><a href="https://www.instagram.com/stuypulse/"><i class="fab fa-instagram" style="font-size:24px;color:red"></i></a></li>
+            <li><a href="https://www.youtube.com/user/stuy694"><i class="fab fa-youtube" style="font-size:24px;color:red"></i></a></li>
+            <li><a href="https://www.tiktok.com/@stuypulse?lang=en"><i class="fab fa-tiktok" style="font-size:24px;color:red"></i></a></li>
+            <li><a href="https://github.com/StuyPulse"><i class="fab fa-github" style="font-size:24px;color:red"></i></a></li>
+            <li><a href="https://www.twitch.tv/stuypulse"><i class="fab fa-twitch" style="font-size:24px;color:red"></i></a></li>
         </ul>
     </div>
 </footer>
