--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -36,20 +36,18 @@
                                     <li><a href="http://www.youtube.com/stuy694">Videos</a></li>
                                 </ul>
                             </li>
-                            <li class="dropdown{% if page.url contains '/resources/' or page.url == '/contact/' %} active{% endif %}">
+                            <li class="dropdown{% if page.url contains '/resources/' %} active{% endif %}">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-proofer-ignore>Resources <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="/resources/">Documents &amp; Tutorials</a></li>
-                                    <li><a href="/resources/technical-binders">Technical Binders</a></li>
                                     <li><a href="/resources/publications/">Team Publications</a></li>
-                                    <li><a href="/contact/">Contact</a></li>
                                 </ul>
                             </li>
-                            <li{% if page.url == '/calendar/' %} class="active"{% endif %}><a href="/calendar/">Calendar</a></li>
-                            <li{% if page.url contains '/blog/' %} class="active"{% endif %}><a href="/blog/">Blog</a></li>
-                            <li{% if page.url == '/sponsors/' %} class="active"{% endif %}><a href="/sponsors/">Sponsors</a></li>
+                            <li{% if page.url == '/calendar/' %} class="active"{% endif %}><a href="/calendar/">Calendar </a></li>
+                            <li{% if page.url contains '/blog/' %} class="active"{% endif %}><a href="/blog/">News </a></li>
                             <!-- <li{% if page.url == '/contact/' %} class="active"{% endif %}><a href="/contact/">Contact</a></li> -->
-                            <li{% if page.url == '/join/' %} class="active"{% endif %}><a href="/join/">Join The Team! </a></li>
+                            <li{% if page.url == '/contact/' %} class="active"{% endif %}><a href="/contact/">Contact Us </a></li>
+                            <li{% if page.url == '/sponsors/' %} class="active"{% endif %}><a href="/sponsors/">Sponsors </a></li>
                             <li id="donate"><a href="/donate/" >Donate</a></li>
                         </ul>
                     </div><!--/.nav-collapse -->
