Add FLL curriculum tab & PDF

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -41,6 +41,7 @@
                                 <ul class="dropdown-menu">
                                     <li><a href="/resources/">Documents &amp; Tutorials</a></li>
                                     <li><a href="/resources/publications/">Team Publications</a></li>
+                                    <li><a href="/resources/fll/">FLL Curriculum</a></li>
                                 </ul>
                             </li>
                             <li{% if page.url == '/calendar/' %} class="active"{% endif %}><a href="/calendar/">Calendar </a></li>
