Add /kickoff/ href to navbar

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -49,7 +49,7 @@
                             <li{% if page.url == '/contact/' %} class="active"{% endif %}><a href="/contact/">Contact </a></li>
                             <li{% if page.url == '/sponsors/' %} class="active"{% endif %}><a href="/sponsors/">Sponsors </a></li>
                             <li id="donate"><a href="/donate/" >Donate</a></li>
-                            <li><a href="#">Kickoff</a></li>
+                            <li><a href="/kickoff/">Kickoff</a></li>
                         </ul>
                     </div><!--/.nav-collapse -->
                 </div>
