Add temporary tab for mock kickoff (#276)
* Add Kickoff tab and readjust size of navbar container

* Add /kickoff/ href to navbar

* Add information about mock game and update groups

* Update groups

* Revert css change

* Remove Contact tab to fit Mock Kickoff tab in navbar

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -46,9 +46,9 @@
                             <li{% if page.url == '/calendar/' %} class="active"{% endif %}><a href="/calendar/">Calendar </a></li>
                             <li{% if page.url contains '/blog/' %} class="active"{% endif %}><a href="/blog/">News </a></li>
                             <!-- <li{% if page.url == '/contact/' %} class="active"{% endif %}><a href="/contact/">Contact</a></li> -->
-                            <li{% if page.url == '/contact/' %} class="active"{% endif %}><a href="/contact/">Contact Us </a></li>
                             <li{% if page.url == '/sponsors/' %} class="active"{% endif %}><a href="/sponsors/">Sponsors </a></li>
                             <li id="donate"><a href="/donate/" >Donate</a></li>
+                            <li><a href="/kickoff/">Mock Kickoff</a></li>
                         </ul>
                     </div><!--/.nav-collapse -->
                 </div>
