--- a/css/main.css
+++ b/css/main.css
@@ -17,12 +17,13 @@
 }
 
 .sponsor-logo-image {
-    padding: 15px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .sponsor-text-sponsor-page {
     height: 120px;
-    padding-top: 20px;
+    padding-left: 15px;
 }
 
 .sponsor-text-front-page {
