Add kickoff to navbar

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,14 +1,15 @@
-        <div class="navbar navbar-fixed-top">
-            <div class="navbar-inner">
-                <div class="container">
-                    <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse" data-proofer-ignore>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </a>
-                    <a class="brand" href="/">StuyPulse</a>
-                    <div class="nav-collapse collapse">
-                        <ul class="nav pull-right">
+<div class="navbar navbar-fixed-top">
+    <div class="navbar-inner">
+        <div class="container">
+            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse" data-proofer-ignore>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </a>
+            <a class="brand" href="/">StuyPulse</a>
+            <div class="nav-collapse collapse">
+                <ul class="nav pull-right">
+                            <li{% if page.url == '/kickoff/' %} class="active"{% endif %}><a href="/kickoff/">Kickoff </a></li>
                             <li class="dropdown{% if page.url contains '/about/' %} active{% endif %}">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-proofer-ignore>About <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
@@ -29,12 +30,12 @@
                                     <li><a href="/community/alumni/">Alumni Association</a></li>
                                 </ul>
                             </li>
-                            <li class="dropdown">
+                            {{/*  <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-proofer-ignore>Media <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="http://www.flickr.com/photos/stuypulse">Photos</a></li>
                                     <li><a href="http://www.youtube.com/stuy694">Videos</a></li>
-                                </ul>
+                                </ul>  */}}
                             </li>
                             <li class="dropdown{% if page.url contains '/resources/' %} active{% endif %}">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-proofer-ignore>Resources <b class="caret"></b></a>
